--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ h2 {
 }
 
 .navbar-dark {
-  background-color: #901cad;
+  background-color: pink;
   background-image: linear-gradient(to right, #5637dd, #3046c5, #510e5a);
   margin-bottom: 2rem;
   min-height: 8rem;
